--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: false
 Depends: R (>= 3.5)
-Suggests: testthat (>= 3.0.0)
+Suggests:
+    testthat (>= 3.0.0),
+    devtools
 Config/testthat/edition: 3
 SystemRequirements: C/C++ compiler, Fortran, make; OpenMP (optional)
 RoxygenNote: 7.3.2
